Moved template folder under corporate-ui, added edit docs link and changed some absolute paths to relative
- Added edit docs link
- changed some absolute paths to relative example html-mail

--- a/corporate-ui/components/extended-docs/email-template.html
+++ b/corporate-ui/components/extended-docs/email-template.html
@@ -47,6 +47,7 @@
 <body class="scania app" id="top">
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
   </c-corporate-header>
 
   <c-main-content>
@@ -142,7 +143,7 @@
                     <h4 class="modal-title">Preview</h4>
                   </div>
                   <div class="modal-body">
-                    <a href="https://scania.github.io/corporate-ui-docs/template/html-mail/index.html" download
+                    <a href="/corporate-ui-docs/corporate-ui/template/html-mail/index.html" download
                       target="_blank">
                       <h4 class="text-right">Download template</h4>
                     </a>
@@ -151,7 +152,7 @@
                         <div class="embed-responsive embed-responsive-16by9 z-depth-1-half" frameborder="0"
                           style="border:none;">
                           <iframe
-                            src="https://scania.github.io/corporate-ui-docs/template/html-mail/index.html"></iframe>
+                            src="/corporate-ui-docs/corporate-ui/template/html-mail/index.html"></iframe>
                         </div>
                       </div>
                     </div>
