--- a/corporate-ui/components/extended-docs/radios-checkboxes.html
+++ b/corporate-ui/components/extended-docs/radios-checkboxes.html
@@ -84,6 +84,7 @@
 <body class="scania app" id="top">
  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Edit Docs</nav-item>
   </c-corporate-header>
 
   <c-main-content>
