Added comon editors page icon

--- a/corporate-ui/components/extended-docs/bootstrap-cards.html
+++ b/corporate-ui/components/extended-docs/bootstrap-cards.html
@@ -69,7 +69,7 @@
       </primary-items>
 
       <secondary-items>
-        <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors</a></nav-item>
+        <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors<i class="scania-icon-share-page-tool xs"></i></a></nav-item>
       </secondary-items>
     </c-main-navigation>
 
