Updated landing page img and nav-items in footer
- Smaller image in landing page
- Added items in the footer on most pages

--- a/corporate-ui/components/extended-docs/extended-file-input.html
+++ b/corporate-ui/components/extended-docs/extended-file-input.html
@@ -204,7 +204,10 @@
         </div>
       </div>
     </section>
-    <c-corporate-footer></c-corporate-footer>
+    <c-corporate-footer>
+      <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+      <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+    </c-corporate-footer>
 
     <style>
     c-file-upload .action-btn-wrapper.c-file-upload,
