--- a/corporate-ui/components/extended-docs/bootstrap-cards.html
+++ b/corporate-ui/components/extended-docs/bootstrap-cards.html
@@ -29,11 +29,9 @@
 </head>
 
 <body class="scania app bs4" id="top">
- <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-  </c-corporate-header>
+ <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/"></c-corporate-header>
 
   <c-main-content>
-
     <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
@@ -1369,86 +1367,86 @@
 
 <script src="https://getbootstrap.com/docs/4.0/assets/js/vendor/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script><script src="https://getbootstrap.com/docs/4.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script><script src="https://getbootstrap.com/docs/4.0/assets/js/docs.min.js"></script>
 
-<style>
-.list-group-flush .list-group-item {
-  border-right: 0;
-  border-left: 0;
-  border-radius: 0;
-}
-
-.list-group-flush:first-child .list-group-item:first-child {
-  border-top: 0;
-}
-
-.list-group-flush:last-child .list-group-item:last-child {
-  border-bottom: 0;
-}
-
-.app .nav-tabs.card-header-tabs {
-    margin-right: -0.625rem;
-    margin-bottom: -0.75rem;
-    margin-left: -0.625rem;
-    border-bottom: 0;
-}
-
-.card,
-button.btn-clipboard {
-    word-break: normal;
-}
-
-h5.card-header,
-.card-header {
-    font-weight: normal;
-    font-family: "Scania Sans Headline";
-    letter-spacing: 0.05rem;
-}
-
-h5.card-title {
-    font-weight: bold;
-    font-family: "Scania Sans Condensed";
-    letter-spacing: -0.05rem;
-    font-size: 1.8rem;
-    padding-top: 8px;
-}
-
-.list-group {
-    margin-bottom: 0;
-}
-
-.app .card .btn {
-    padding: 6px 14px;
-}
-
-div + a.anchorjs-link {
-    display: none;
-}
-
-.text-white { color: #fff !important; }
-
-.text-muted { color: #6c757d!important; }
-
-.text-hide {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
-
-    .card ul.nav.nav-pills li + li {
-      margin-bottom: 0;
+  <style>
+    .list-group-flush .list-group-item {
+      border-right: 0;
+      border-left: 0;
+      border-radius: 0;
     }
 
-.card h1, 
-.card h2, 
-.card h3, 
-.card h4, 
-.card h5, 
-.card h6,
-p {
-  color: inherit;
-}
+    .list-group-flush:first-child .list-group-item:first-child {
+      border-top: 0;
+    }
 
-</style>   
+    .list-group-flush:last-child .list-group-item:last-child {
+      border-bottom: 0;
+    }
+
+    .app .nav-tabs.card-header-tabs {
+        margin-right: -0.625rem;
+        margin-bottom: -0.75rem;
+        margin-left: -0.625rem;
+        border-bottom: 0;
+    }
+
+    .card,
+    button.btn-clipboard {
+        word-break: normal;
+    }
+
+    h5.card-header,
+    .card-header {
+        font-weight: normal;
+        font-family: "Scania Sans Headline";
+        letter-spacing: 0.05rem;
+    }
+
+    h5.card-title {
+        font-weight: bold;
+        font-family: "Scania Sans Condensed";
+        letter-spacing: -0.05rem;
+        font-size: 1.8rem;
+        padding-top: 8px;
+    }
+
+    .list-group {
+        margin-bottom: 0;
+    }
+
+    .app .card .btn {
+        padding: 6px 14px;
+    }
+
+    div + a.anchorjs-link {
+        display: none;
+    }
+
+    .text-white { color: #fff !important; }
+
+    .text-muted { color: #6c757d!important; }
+
+    .text-hide {
+      font: 0/0 a;
+      color: transparent;
+      text-shadow: none;
+      background-color: transparent;
+      border: 0;
+    }
+
+        .card ul.nav.nav-pills li + li {
+          margin-bottom: 0;
+        }
+
+    .card h1,
+    .card h2,
+    .card h3,
+    .card h4,
+    .card h5,
+    .card h6,
+    p {
+      color: inherit;
+    }
+
+  </style>
 </body>
 </html>
