--- a/corporate-ui/components/extended-docs/email-template.html
+++ b/corporate-ui/components/extended-docs/email-template.html
@@ -208,7 +208,10 @@
       </div>
     </section>
   </c-main-content>
-  <c-corporate-footer></c-corporate-footer>
+  <c-corporate-footer>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+  </c-corporate-footer>
 </body>
 
 </html>
