--- a/corporate-ui/components/extended-docs/extended-forms.html
+++ b/corporate-ui/components/extended-docs/extended-forms.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
   <title>UX Library - Bootstrap CSS for Applications</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
- 
+
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
   <link rel="stylesheet" href="css/scania-bootstrap-docs.css">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
+  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
   <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/select2/3.5.2/css/select2.css">
   <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/select2/3.5.2/css/corporate-ui-select.css">
@@ -22,10 +22,8 @@
   <script src="https://static.scania.com/vendors/components/jQuery/select2/3.5.2/js/glass.js"></script>
 
 
-  <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">  
+  <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
   <script src="/corporate-ui-docs/js/holder.js"></script>
-
-
 
   <script src="https://static.scania.com/vendors/frameworks/jQuery/3.0.0/dist/jquery.js"></script>
   <script src="https://static.scania.com/vendors/components/jQuery/select2/3.5.2/js/select2.js"></script>
@@ -34,6 +32,7 @@
 
   <script src="https://static.scania.com/cds/mlebg7/selecct2/scania-angular-ui/src/scania-angular-ui.js"></script>
   <script src="https://static.scania.com/cds/mlebg7/selecct2/scania-angular-ui/app.js"></script>
+
   <script>
     $(".js-example-placeholder-single").select2({
       placeholder: "APA",
@@ -60,66 +59,32 @@
           });
   </script>
 
-
-
   <style>
+    table.table > thead  > tr > th {
+          padding-left: 18px !important;
+      }
 
+      .table > thead:first-child > tr:first-child th {
+          padding-bottom: 0;
+          padding-top: 18px;
 
+      }
 
+      .table > thead:first-child > tr:nth-child(2) {
+          padding-bottom: 0;
+          padding-top: 0;
+      }
 
-
-/*    input[type=radio]:checked + span:before {
-        background-color: #041e42;
-    }
-
-    input[type=radio]:not(:checked) + span:before {
-        background-color: transparent;
-    }
-    
-
-    input[type=radio]:disabled.radio-checkbox-inverse + span:before,
-    input[type=radio]:disabled + span:before {
-        background-color: transparent;
-        cursor: not-allowed;
-    }
-
-    input[type=radio]:disabled + span:hover:before {
-        background-color: transparent;
-    }
-
-    input[type=radio]:disabled:checked + span:before {
-        background-color: #cacaca;
-    }*/
-
-
-
-   table.table > thead  > tr > th {
-        padding-left: 18px !important;
-    }
- 
-    .table > thead:first-child > tr:first-child th {
-        padding-bottom: 0;
-        padding-top: 18px;
-
-    }
-
-    .table > thead:first-child > tr:nth-child(2) {
-        padding-bottom: 0;
-        padding-top: 0;
-    }
-
-    .table > thead:first-child > tr:nth-child(3) th {
-        padding-bottom: 12px;
-        padding-top: 0;
-    }
-
-  </style>  
+      .table > thead:first-child > tr:nth-child(3) th {
+          padding-bottom: 12px;
+          padding-top: 0;
+      }
+  </style>
 
 </head>
 
 <body class="scania app" id="top">
- <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-  </c-corporate-header>
+ <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/"></c-corporate-header>
 
   <c-main-content>
     <c-main-navigation>
@@ -161,7 +126,7 @@
 
 
     <!--      Things to discuss: Radio buttons purpose, name for group.
-              How many thead can there be?  -->             
+              How many thead can there be?  -->
 
     <section class="light">
       <div class="container">
@@ -354,11 +319,11 @@
                   Option 6 - Unchecked and Disabled
                 </label>
               </div>
-            </div>               
+            </div>
           </div>
         </div>
-      </div>  
-    </section>  
+      </div>
+    </section>
     <section class="light">
       <div class="container">
         <div class="row">
@@ -1312,9 +1277,14 @@
             </div>
           </div>
         </div>
-   </div>       
-  </section>  
-      
+      </div>
+    </section>
+
+  <c-corporate-footer>
+    <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+  </c-corporate-footer>
+
 </body>
 </html>
 
