--- a/corporate-ui/components/extended-docs/main-navigation-more-demo.html
+++ b/corporate-ui/components/extended-docs/main-navigation-more-demo.html
@@ -42,11 +42,12 @@
           <ul>
               <li>Set primary and secondary items with angular</li>
               <li><strong>Switch</strong> between items in the menu, for example language</li>
-              <li>Set <strong>Dropdown</strong></li>
+              <li>Set <strong>Dropdown</strong> by using <strong>"Dropdown":"true"</strong></li>
               <li>See <strong>More</strong> is working by resizing</li>
               <li>Switch the more text with attribute <strong>more-text</strong> </li>
               <li>Set <Strong>Caption</Strong> on sub-navigation</li>
               <li>Set specific <Strong>order </Strong> by using <strong>index: -1</strong> for example</li>
+              <li>Set active <Strong>active </Strong> item, by using <strong>class="active"</strong> or <strong>"active:true"</strong></li>
             </ul>
 
           <button class="btn btn-primary ChangeMenuItemSE">Switch to Swedish menu</button>
