--- a/corporate-ui/components/index.html
+++ b/corporate-ui/components/index.html
@@ -10,8 +10,9 @@
 
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
 
-  <!--   3.5.2-CF   -->
+  <!--   3.5.3-CF   -->
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
+
   <!-- Ux-library bootstrap docs specific css  -->
   <link rel="stylesheet" href="/corporate-ui-docs/corporate-ui/css/scania-bootstrap-docs.css">
   <link rel="stylesheet" href="/corporate-ui-docs/corporate-ui/css/prism.css">
@@ -20,7 +21,6 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>
 
-  <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
   <script src="/corporate-ui-docs/js/holder.js"></script>
 
 <style>
@@ -43,37 +43,6 @@
 <script>
 
 $(function(){
-  // window.onload = function(){
-  // if(location.hash) {
-  //   var tabElementsAnchors = {};
-  //   var targetSection = '';
-
-  //   $('.tab-content.zone > .tab-pane').each(function(key, section) {
-  //     tabElementsAnchors[section.id] = []
-  //     $('.bs-docs-sidebar ul > li > a', section).each(function(key, link) {
-  //       tabElementsAnchors[section.id].push($(link).attr('href'));
-  //     });
-  //   })
-
-  //   Object.keys(tabElementsAnchors).map(function(sectionId) {
-  //     var section = tabElementsAnchors[sectionId];
-  //     if(section.indexOf(location.hash) > -1) {
-  //       targetSection = sectionId;
-  //     }
-  //   })
-
-  //   console.log(tabElementsAnchors);
-
-  //   $('.nav.nav-tabs.c-ui-tabs > li').removeClass('active');
-  //   $('.c-ui-tabs > li > a[href=#' + targetSection + ']').parent().addClass('active');
-  //   $('.tab-pane').removeClass('fade active');
-  //   $('#' + targetSection + '.tab-pane').addClass('active');
-
-  //   if (location.hash) {
-  //     location.href = location.hash;
-  //   }
-  // }
-  // }
   var hash = window.location.hash;
   var tabInstallationAnchors =  [ "#corporate-ui-installation-overview", "#corporate-ui-installation-overview"];
   var tabElementsAnchors =  [ "#corporate-ui-components-overview", "#corporate-header", ,"#corporate-header-dealer-variation", "#main-content", "#main-nav", "#corporate-footer" ];
@@ -82,12 +51,12 @@ $(function(){
   var tabJavaScriptAnchors =   ["#js-overview", "#componentModal", "#modalOptions", "#modalMethods", "#modalEvents", "#modalUsage", "#modalExamples", "#componentDropdown", "#dropdownOptions", "#dropdownMethods", "#dropdownEvents", "#dropdownUsage", "#dropdownExamples", "#componentScrollspy", "#scrollspyOptions", "#scrollspyMethods", "#scrollspyEvents", "#scrollspyUsage", "#scrollspyExamples", "#componentTab", "#tabOptions", "#tabMethods", "#tabEvents", "#tabUsage", "#tabExamples", "#componentTooltip", "#tooltipOptions", "#tooltipMethods", "#tooltipEvents", "#tooltipUsage", "#tooltipExamples", "#componentPopover", "#popoverOptions", "#popoverMethods", "#popoverEvents", "#popoverUsage", "#popoverExamples", "#componentAlert", "#alertOptions", "#alertMethods", "#alertEvents", "#alertUsage", "#alertExamples", "#componentButton", "#buttonOptions", "#buttonMethods", "#buttonEvents", "#buttonUsage", "#buttonExamples", "#componentCollapse", "#collapseOptions", "#collapseMethods", "#collapseEvents", "#collapseUsage", "#collapseExamples", "#componentCarousel", "#carouselOptions", "#carouselMethods", "#carouselEvents", "#carouselUsage", "#carouselExamples", "#componentAffix", "#affixOptions", "#affixMethods", "#affixEvents", "#affixUsage", "#affixExamples" ];
   var tabTemplateAnchors =   ["#template-overview", "#sample-page-overview","#email-template-overview"];
 
-  console.dir(tabInstallationAnchors);
-  console.dir(tabElementsAnchors);
-  console.dir(tabComponentsAnchors);
-  console.dir(tabCSSAnchors);
-  console.dir(tabJavaScriptAnchors);
-  console.dir(tabTemplateAnchors);
+  // console.dir(tabInstallationAnchors);
+  // console.dir(tabElementsAnchors);
+  // console.dir(tabComponentsAnchors);
+  // console.dir(tabCSSAnchors);
+  // console.dir(tabJavaScriptAnchors);
+  // console.dir(tabTemplateAnchors);
 
   //Config for nav-pills on top(li:nth-child(X))
   if ( jQuery.inArray( hash, tabInstallationAnchors ) >= 0 ) {
@@ -9850,6 +9819,5 @@ theAffixInit<span class="token punctuation">.</span><span class="token function"
         }
       }
     </style>
-  <script src="js/bootstrap-native-docs-scripts.js"></script>
 </body>
 </html>
