--- a/corporate-ui/template/basic-template.html
+++ b/corporate-ui/template/basic-template.html
@@ -8,16 +8,13 @@
 	<title>Corporate UI - Minimum Template</title>
 	<script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-	<script src="https://static.scania.com/vendors/frameworks/jQuery/2.2.2/jquery.min.js"></script>
 	<script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
 
 </head>
 
 <body class="scania">
 
-	<c-corporate-header site-name="My New Application" site-url="/corporate-ui-docs/">
-		<nav-item location="https://www.scania.com">Sample Link</nav-item>
-	</c-corporate-header>
+	<c-corporate-header site-name="My New Application" site-url="/corporate-ui-docs/"></c-corporate-header>
 
 	<c-main-content>
 		<c-main-navigation>
@@ -57,8 +54,8 @@
 			</secondary-items>
 		</c-main-navigation>
 
-		<section>
-			<link rel="import" href="https://static.scania.com/build/global/3.2.1-CF/components/teaser/teaser.html">
+		<section class="container">
+			<link rel="import" href="https://static.scania.com/build/global/3.5.3/components/teaser/teaser.html">
 			<c-teaser variation="1" headline="Increase Productivity" description="Molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et.">
 				<teaser-item headline="Life at Scania" image="https://static.scania.com/resources/images/demo/truck-tires-mud.png">
 					Scania’s spirit of leadership is built upon shared and inclusive core values. This creates a unique climate where our employees enjoy taking on responsibility – and the chance to develop and realise their potential.
@@ -68,17 +65,20 @@
 				</teaser-item>
 			</c-teaser>
 		</section>
-		<section class="light">
+		<section class="light container">
 			<c-teaser variation="2" headline="Tailored for you" description="Based around your area of industry and application, our tailored made packages are moulded around your needs." link="#test" link-text="Discover total solutions">
 				<teaser-item headline="Modularised design" image="https://static.scania.com/resources/images/demo/modules.jpg"></teaser-item>
 				<teaser-item headline="Tailored servicing & fleet management" image="https://static.scania.com/resources/images/demo/tailored.jpg"></teaser-item>
 				<teaser-item headline="Flexible financing" image="https://static.scania.com/resources/images/demo/finance.jpg"></teaser-item>
 				<teaser-item headline="Personalized training" image="https://static.scania.com/resources/images/demo/personalized.jpg"></teaser-item>
 			</c-teaser>
-
 		</section>
+
 	</c-main-content>
-	<c-corporate-footer></c-corporate-footer>
+	<c-corporate-footer>
+		<nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
+    <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
+	</c-corporate-footer>
 </body>
 </html>
 
