Added latest cui version to fix header problem
- Update to the latest corporate-ui version which contains fix to the header problem caused by Chrome update

--- a/corporate-ui/components/index.html
+++ b/corporate-ui/components/index.html
@@ -11,7 +11,7 @@
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
 
   <!--   3.5.3-CF   -->
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
 
   <!-- Ux-library bootstrap docs specific css  -->
   <link rel="stylesheet" href="/corporate-ui-docs/corporate-ui/css/scania-bootstrap-docs.css">
@@ -415,7 +415,7 @@ $(function(){
 
                   <div class="highlight">
                     <pre><code class="language-html" data-lang="html">
-<span class="nt">&lt;script</span> <span class="na">src=</span><span class="s">"https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"</span><span class="nt">&gt;</span>
+<span class="nt">&lt;script</span> <span class="na">src=</span><span class="s">"https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"</span><span class="nt">&gt;</span>
                     </code></pre>
                   </div>
 
@@ -442,7 +442,7 @@ $(function(){
     <span class="nt">&lt;meta</span> <span class="na">charset=</span><span class="s">"utf-8"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;meta</span> <span class="na">name=</span><span class="s">"viewport"</span> <span class="na">content=</span><span class="s">"width=device-width, initial-scale=1, shrink-to-fit=no"</span><span class="nt">&gt;</span>
     <span class="nt">&lt;title&gt;</span>Corporate UI Sample Page<span class="nt">&lt;/title&gt;</span>
-    <span class="nt">&lt;script</span> <span class="na">src=</span><span class="s">"https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"</span><span class="nt">&gt;</span>    
+    <span class="nt">&lt;script</span> <span class="na">src=</span><span class="s">"https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"</span><span class="nt">&gt;</span>    
   <span class="nt">&lt;/head&gt;</span>
   <span class="nt">&lt;body</span> <span class="na">class=</span><span class="s">&quot;scania app&quot;<span class="nt">&gt;</span>   
     <span class="nt">&lt;c-corporate-header</span> <span class="na">site-name=</span><span class="s">&quot;My application name&quot;</span> <span class="na">short-name=</span><span class="s">&quot;My app&quot;</span><span class="na"> site-url=</span><span class="s">&quot;/&quot;</span><span class="nt">&gt;</span>
@@ -895,7 +895,7 @@ $(function(){
                   <h1 id="core-css-overview">Core CSS (Scania Bootstrap)</h1>
                   <p class="lead">Scania Bootstrap is now a subset of the Corporate UI framework. Scania Bootstrap can still be used "stand alone" to tailor applications with the Corporate UI look and feel. Although, it will not fully take advantage of the easy uf use that our Custom Elements do offer. You'll simply have to develop and maintain a lot of the HTML and JavaScript code that's already availble in the components.</p>
                   <p class="lead">When it comes to designing your particular functionallity, please copy code snippets from the <a href="/corporate-ui-docs/corporate-ui/html-copy-paste/">the HTML Copy Paste section</a> or from this code repository. The library is uppdated on a daily basis so make sure you'll visit it frequently.</p>
-                  <p class="lead">All things that you'll need for your development, like icons, fonts. CSS and Custom Elements will become available for you once you're loading the <a href="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js">corporate-ui.js</a>.</p>
+                  <p class="lead">All things that you'll need for your development, like icons, fonts. CSS and Custom Elements will become available for you once you're loading the <a href="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js">corporate-ui.js</a>.</p>
 
                   <h2>CSS: Custom, Bootstrap 3 and Bootstrap 4</h2>
                   <p>We've haven't done a complete upgrade to Bootstrap 4, rather than keeping some key classes from Bootstrap 3 and gradually adding things from Bootstrap 4. Currently, you'll be able to use Cards, Spacing and Vertical Align as well as the Grid. If you want to use the Bootstrap 4 Grid, please add the class .bs4 to your body element. If you need something else from Bootstrap 4, please add it as a <a href="https://github.com/scania/corporate-ui/issues/new/choose">feature request</a>. Read more about how to use the CSS in the <a href="#bootstrap-4">Bootstrap 4 section</a></p>                  
@@ -4600,7 +4600,7 @@ Extra small button <span class="nt">&lt;span</span> <span class="na">class=</spa
                 </div>
                 <div class="highlight">
                   <pre><code class="language-html" data-lang="html">
-<span class="nt">&lt;script</span> <span class="na">src=</span><span class="s">"https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"</span><span class="nt">&gt;</span>
+<span class="nt">&lt;script</span> <span class="na">src=</span><span class="s">"https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"</span><span class="nt">&gt;</span>
 
 <span class="nt">&lt;c-main-navigation</span><span class="nt">&gt;</span>
   <span class="nt">&lt;primary-items</span><span class="nt">&gt;</span>
