--- a/corporate-ui/components/components-iframe/docs-example-corporate-header.html
+++ b/corporate-ui/components/components-iframe/docs-example-corporate-header.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Corporate UI Sample Page</title>
 
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
 
 </head>
 
