--- a/corporate-ui/components/extended-docs/email-template.html
+++ b/corporate-ui/components/extended-docs/email-template.html
@@ -13,7 +13,7 @@
   <title>Corporate UI - Minimum Template</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js?monitoring=true"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js?monitoring=true"></script>
   <style>
     .card-body {
       padding: 4.0rem;
