--- a/corporate-ui/components/extended-docs/main-navigation-more-demo.html
+++ b/corporate-ui/components/extended-docs/main-navigation-more-demo.html
@@ -10,7 +10,7 @@
 
   <title>More items</title>
 
-  <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
 
 </head>
 <body class="scania ux-lib app light" ng-app="CorporateUI" ng-controller="App as app">
