--- a/corporate-ui/components/components-iframe/docs-example-corporate-dealer-header-logotype.html
+++ b/corporate-ui/components/components-iframe/docs-example-corporate-dealer-header-logotype.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8">
   <title>Corporate UI Sample Page</title>
-  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
 </head>
 
 <body class="scania app">
