--- a/corporate-ui/template/basic-template.html
+++ b/corporate-ui/template/basic-template.html
@@ -8,7 +8,7 @@
 	<title>Corporate UI - Minimum Template</title>
 	<script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-	<script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
+	<script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
 
 </head>
 
