Removed GA and changed link and text for SDDS
- Removed GA script
- Changed text and links for landing page to point at SDDS

--- a/corporate-ui/components/extended-docs/extended-tables.html
+++ b/corporate-ui/components/extended-docs/extended-tables.html
@@ -11,7 +11,7 @@
   <!-- Table Sorter Plugin -->
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
 
-  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js?monitoring=true"></script>
+  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
   <link rel="stylesheet" href="css/scania-bootstrap-docs.css">
 
   <script src="https://static.scania.com/vendors/components/jQuery/table-sorter/2.30.3/js/jquery.tablesorter.combined.js"></script>
@@ -40,8 +40,8 @@
     });
   </script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+    
+    
 
 </head>
 
