--- a/corporate-ui/components/extended-docs/bootstrap-cards.html
+++ b/corporate-ui/components/extended-docs/bootstrap-cards.html
@@ -7,11 +7,10 @@
 
   <title>UX Library - Bootstrap CSS for Applications</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js?monitoring=true"></script>
+  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
   <link rel="stylesheet" href="css/scania-bootstrap-docs.css">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
+
 
   <link rel="stylesheet" rel="import" href="https://getbootstrap.com/docs/4.0/assets/css/docs.min.css">
 
