--- a/corporate-ui/components/extended-docs/extended-file-input.html
+++ b/corporate-ui/components/extended-docs/extended-file-input.html
@@ -8,9 +8,8 @@
   <title>UX Library - Scania Custom File Upload</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js?monitoring=true"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
+
   <link rel="import" href="https://static.scania.com/build/global/3.5.2/components/file-upload/file-upload.html">
 
   <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase.js"></script>
