--- a/corporate-ui/components/extended-docs/radios-checkboxes.html
+++ b/corporate-ui/components/extended-docs/radios-checkboxes.html
@@ -61,7 +61,10 @@
     <!--      Things to discuss: Radio buttons purpose, name for group.
               How many thead can there be?  -->
 
-    <section class="light">
+        <div class="alert alert-warning text-center mb-0">UX library will be closed by the end of Q3 2021. Check out <a class="alert-link" href="https://digitaldesign.scania.com/" target="_blank">Scania Digital Design System</a> for guidelines and more.</div>
+        <div class="alert alert-primary text-center"><strong>Support for Corporate UI 3 will end in August 2021.</strong>
+          <a class="alert-link" href="/corporate-ui-docs/corporate-ui/">Read more!</a>
+        </div><section class="light">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -274,7 +277,10 @@
         </div>
       </div>  
     </section>  
-    <section class="light">
+        <div class="alert alert-warning text-center mb-0">UX library will be closed by the end of Q3 2021. Check out <a class="alert-link" href="https://digitaldesign.scania.com/" target="_blank">Scania Digital Design System</a> for guidelines and more.</div>
+        <div class="alert alert-primary text-center"><strong>Support for Corporate UI 3 will end in August 2021.</strong>
+          <a class="alert-link" href="/corporate-ui-docs/corporate-ui/">Read more!</a>
+        </div><section class="light">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
