--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en-GB" class="corporate-ui">
-<head>
+  <head>
     {% include meta.html %}
-</head>
-<body class="scania">
+  </head>
+  <body class="scania">
     {% include header.html %}
 
     <c-main-content>
-        {% include navigation.html %}
-
-        {{ content }}
+      {% include navigation.html %} {{ content }}
     </c-main-content>
 
     {% include footer.html %}
-</body>
+  </body>
+</html>
